--- a/pomolo.html
+++ b/pomolo.html
@@ -1007,12 +1007,14 @@
 
                 <h3 style="margin-top:10%;"> REFLECTION </h3>
                 <p> 
-                  Prior to this class, I thought I knew all
-                  there was to a successful login and signup process. 
-                  
-                  Little did I know that I'd embark on a journey that'd require 
-                  extensive user research, iterations, and testing to produce 
-                  a product with intentional designs and solve identified issues. 
+                  Wooo, we’ve reached the end! This was my very first solo UX 
+                  case study and to say that it was a <em> process </em> is an understatement. 
+                  Prior to this project, I thought I knew all the nuts and bolts 
+                  to a successful registration and login experience. Little did 
+                  I know, I was about to embark on a journey that’d require 
+                  extensive user research, iterations, and testing to bring 
+                  forth a product with intentional designs and solve identified 
+                  issues. 
 
                   I learned so much about understanding user motivations, how to 
                   build a successful product from start to finish, conducting 
@@ -1022,7 +1024,7 @@
 
                   <ol style="margin-left:15px; margin-top:15px;">
                     <li> <b> Don't be afraid of testing!</b> <br>
-                    Prior to taking this class, the thought of reaching out to 
+                    Before taking this class, the thought of reaching out to 
                     colleagues to conduct user interviews was incredibly 
                     nerve-wracking. However, after mustering up the courage and 
                     conducting several sessions later, it reminded me how much I 
