--- a/pomolo.html
+++ b/pomolo.html
@@ -1011,7 +1011,7 @@
                   case study, and
                   prior to this project, I thought I knew all the nuts and bolts 
                   to a successful registration and login experience. Little did 
-                  I know, I was about to embark on a journey that’d require 
+                  I know, I'd embark on a journey that’d require 
                   extensive user research, iterations, and testing to develop a 
                   product with intentional designs and solve identified 
                   issues. 
@@ -1021,16 +1021,16 @@
                   usability tests, and designing a product with a specific 
                   intention. 
                   
-                  The main lessons I've taken away from this experience are: 
+                  The main lessons I've taken away from this experience include: 
 
                   <ol style="margin-left:15px; margin-top:15px;">
                     <li> <b style="color: #8d8d8d;"> Don't be afraid of user research</b> <br>
                     Before taking this class, the thought of directing user 
                     interviews was incredibly nerve-wracking.
-                    However, after conducting a few sessions,
+                    However, at the end of every session,
                     I was consistently reminded of how much I 
                     loved connecting with people.
-                    User interviews began to feel more and more natural, and became something 
+                    User interviews felt more and more natural, and became something 
                     I looked forward to doing. Rather than viewing the experience as a formality,
                     I found it helpful to view it as a conversation between friends. 
                     Take it from me - to get comfortable
