added process deck and figma file

--- a/pomolo.html
+++ b/pomolo.html
@@ -1082,9 +1082,14 @@
 
                   <hr class="solid" style="margin-top:6%; margin-bottom:8%;">
 
-                  <p style="margin-top:0px; font-size:20px; width:80%; position:left; color:#000000;">
-                    <b> Thank you so much for reading! </b> Feel free to check out the design
-                    process for Pomolo's signup and login experience below!
+                  <p style="margin-top:0px; font-size:25px; width:100%; text-align:center; color:#000000;">
+                    <b> Thank you so much for reading! </b> <br> 
+                  </p>
+
+
+                  <p style="color: #8e8e8e; margin-top:20px; font-size:16px; width:60%; text-align:center;">
+                    Feel free to check out the design
+                    process for <br> Pomolo's signup and login experience below!
                   </p>
 
               </div> <!-- end of entry -->
