added process deck and figma file

--- a/pomolo.html
+++ b/pomolo.html
@@ -1050,8 +1050,7 @@
                     </li>
 
                     <li style="margin-top:15px;"> <b style="color: #8d8d8d;"> Keep iterating </b> <br>
-                    Always try out multiple solutions! I made nearly 10 different design solutions 
-                    before deciding on the final one.
+                    Always try out multiple solutions!
                     By consistently refining your work early on, you make critical changes,
                     resolve hidden issues, and ensure your product meets its 
                     functionality and usability goals.
