--- a/pomolo.html
+++ b/pomolo.html
@@ -653,8 +653,20 @@
                         <!-- <h2 style="text-align:center; font-family:Amiko; font-weight:600; font-size:15px;	color: #177add; margin-bottom:20px;"> MID-FIDELITY SURVEYS </h2> -->
                         <img src="assets/img/portfolio/mid0.png" style="width:100%;" alt="">
                       </div>
+
                         
                     </div> 
+
+                    <div class="container" style="margin-top:50px; width:100%; display:grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); grid-gap:50px;">
+
+                      <div class="box" style="width:100%; position:relative;">
+                        <!-- <h2 style="text-align:center; font-family:Amiko; font-weight:600; font-size:15px;	color: #177add; margin-bottom:20px;"> MID-FIDELITY SURVEYS </h2> -->
+                        <img src="assets/img/portfolio/mid00.png" style="width:100%;" alt="">
+                      </div>
+
+                        
+                    </div> 
+
                   </section>
 
                 </p>
