moved style guide to before reflection

--- a/pomolo.html
+++ b/pomolo.html
@@ -1103,7 +1103,7 @@
 
                   <p style="color: #8e8e8e; margin-top:20px; font-size:16px; width:80%; text-align:center;">
                     Feel free to check out the design
-                    process for Pomolo's signup and login experience below!
+                    process for Pomolo's signup and login experience below.
                   </p>
 
               </div> <!-- end of entry -->
