--- a/pomolo.html
+++ b/pomolo.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> Signup and Login With Pomolo  • Irene Lue </title>
+  <title> Pomolo's Onboarding Experience  • Irene Lue </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -105,7 +105,7 @@
 
             <article class="entry entry-single">
               <h2 class="title1">
-                Signup and Login <br> with Pomolo
+                Pomolo's Onboarding Experience
               </h2>
 
               <h2 class="subtitle1">
@@ -1103,7 +1103,7 @@
 
                   <p style="color: #8e8e8e; margin-top:20px; font-size:16px; width:80%; text-align:center;">
                     Feel free to check out the design
-                    process for Pomolo's signup and login experience below.
+                    process for Pomolo's onboarding experience below.
                   </p>
 
               </div> <!-- end of entry -->
