--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               <div class="image" >
                 <img src="assets/img/portfolio/pomolo.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay2">
-                    <div class="image_title"> Signup & Login <br> With Pomolo </div>
+                    <div class="image_title"> Pomolo's Onboarding Experience </div>
                     <p class="image_description"> Mobile, User Research, UX, Visual Design
                     </p>
                 </div>
