--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;450&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;600&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Amiko:wght@300;400;500;600;650;700&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
         
@@ -121,23 +120,23 @@
       <i class="bi bi-list mobile-nav-toggle"></i>
     </nav> <!-- .navbar -->
 
-    <div class="hero-container">
+    <div class="hero-container" style="padding-left:0px; border:white 1px solid; margin-right:50px;">
       <br> <br>
       <h1 class="logo"><a href="index.html" title="IRENE LUE">  IRENE LUE </a> </h1>
-      <h1> Hello, I'm Irene! 👋 </h1>
+      <h1> Hello! I'm Irene. </h1>
 
       <!-- HEADER ROTATOR REMOVED STARTING HERE -->
-      <h3 > Computer Science graduate from UC San Diego and 
+      <h3 > Computer science graduate from UC San Diego and 
       designer creating digital experiences in Los Angeles, CA. </h3>
 
       <div class="container" style="margin-left:0px; margin-top:20px;">
         <div class="row">
 
-          <a class="button-box" href="aboutme.html" target="_blank"> Read more </a>
+          <a class="button-box" href="aboutme.html" target="_blank"> read more </a>
 
           <div class="column" style="width:2%;"></div>
 
-          <a class="button-box" href="https://drive.google.com/file/d/12rzkYMgnRpGLCT0f8pZ9-xkR90WFunnO/view?usp=sharing" target="_blank">Resume</a></li>
+          <a class="button-box" href="https://drive.google.com/file/d/12rzkYMgnRpGLCT0f8pZ9-xkR90WFunnO/view?usp=sharing" target="_blank">resume</a></li>
 
         </div>
       </div>
