--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
       <div class="container" style="margin-left:0px; margin-top:20px;">
         <div class="row">
 
-          <a class="button-box" href="aboutme.html" target="_blank"> read more </a>
+          <a class="button-box" href="aboutme.html" target="_blank"> Read more </a>
 
           <div class="column" style="width:2%;"></div>
 
-          <a class="button-box" href="https://drive.google.com/file/d/12rzkYMgnRpGLCT0f8pZ9-xkR90WFunnO/view?usp=sharing" target="_blank">resume</a></li>
+          <a class="button-box" href="https://drive.google.com/file/d/12rzkYMgnRpGLCT0f8pZ9-xkR90WFunnO/view?usp=sharing" target="_blank">Resume</a></li>
 
         </div>
       </div>
@@ -293,7 +293,7 @@
       </div>
       <div class="me-md-auto text-center">
         <div class="copyright">
-          <h1 style="color:#a8a8a8;font-family:Amiko;font-size:13px; font-weight:600; letter-spacing:1px; margin-top:5px; padding-bottom:5px; "> LUEIRENE@GMAIL.COM </h1>
+          <h1 style="color:#a8a8a8;font-family:Amiko;font-size:12px; font-weight:400; letter-spacing:1px; margin-top:5px; padding-bottom:5px; "> LUEIRENE@GMAIL.COM </h1>
           <h1 style="color:#a8a8a8;font-family:Amiko;font-size:12px;letter-spacing:0px;margin-bottom:30px;" <span> &copy IRENE LUE 2022 </span> </h1>
           <!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1> -->
         </div>
