--- a/aboutme.html
+++ b/aboutme.html
@@ -100,22 +100,20 @@
                 <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch"> -->
                 <div class="member-img">             <!-- class="img-fluid rounded-circle" --> 
                   <br>
-                  <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid" alt="" style="border-radius:20px; margin-bottom:50px;"> 
+                  <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid" alt="" style="border-radius:10px; margin-bottom:50px;"> 
                 
                 </div>
               </div>
    
           </div> 
 
-          <div class="col-lg-6 mx-auto"> 
+          <div class="col-lg-6 mx-auto" style="border:solid white 1px; margin:auto;"> 
             <div class="container">
-              <div class="about-title2">
-                <!-- <p style="font-size:200%"> -->
-                Hi there! 🤝
-                <!-- <p> -->
+              <!-- <div class="about-title2">
+                Hi there! 🤝 -->
               </div>
               <div class ="about-paragraph2">
-                Nice to meet you, I'm Irene! I’m a Computer Science 
+                Nice to meet you, I'm Irene! 🤝 <br> <br> I’m a Computer Science 
                 graduate from UC San Diego and UX designer in training. I'm 
                 currently studying under UCLA's UX Design program and working on 
                 projects in product design and web development.
@@ -130,7 +128,7 @@
                 </div>
 
               <div class ="about-paragraph2">
-                I'd love to hear from you! Feel free to reach out to me at: 
+                If you'd like to get in touch, feel free to reach out to me at: 
                 <a class="about-link" href="mailto: irenelue01@gmail.com" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
     
                 <!-- <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
@@ -198,7 +196,7 @@
                       <div class="books-list">
                         <ol>
                           <li> Strength-training </li>
-                          <li> Photography </li>
+                          <li> Hiking </li>
                           <li> Reading </li>
                         </ol>
                       </div>
@@ -259,7 +257,7 @@
                         <ol>
                           <li> Mandarin </li>    
                           <li> Endurance Running </li>                       
-                          <li> Animation </li> 
+                          <li> Photography </li> 
                         </ol>
                       </div>
                       <div class="image_overlay2">
@@ -342,7 +340,7 @@
                   <!-- <div class="col-lg-3 col-md-3 portfolio-item" class="img-fluid"> -->
                   <div class="column" class="img-fluid"><a href="https://www.instagram.com/p/BJYBuEwA4Fj/" target="blank">
                       <div class="image">
-                        <img src="assets/img/insta/taiwan.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/insta/taiwan.jpg" class="img-fluid" alt="" style="border-radius:10px;">
                         <div class="image_overlay2">
                             <div class="image_title2"> 💙🇹🇼❤️</div>
                         </div>
@@ -357,7 +355,7 @@
                       <div class="image">
                         <img src="assets/img/insta/post5.jpg" class="img-fluid" alt="" style="border-radius:10px;">
                         <div class="image_overlay2">
-                            <div class="image_title2">MY SWEET GIRL🤍</div>
+                            <div class="image_title2">🐼🤍</div>
                         </div>
                       </div>
                     </a>
