--- a/grid-gallery.html
+++ b/grid-gallery.html
@@ -141,12 +141,11 @@
         </div>
       </div>
 
-      <div class="gallery-container w-3 h-4">
+    <!--   <div class="gallery-container w-3 h-4">
         <div class="gallery-item">
           <div class="image">
             <img src="assets/img/camera/j0.JPG" alt="">
           </div>
-          <!-- <div class="text">People</div> -->
         </div>
       </div>
 
@@ -155,7 +154,6 @@
           <div class="image">
             <img src="assets/img/camera/nn0.JPG" alt="">
           </div>
-          <!-- <div class="text">People</div> -->
         </div>
       </div>
 
@@ -164,9 +162,8 @@
           <div class="image">
             <img src="assets/img/camera/k0.JPG" alt="">
           </div>
-          <!-- <div class="text">People</div> -->
         </div>
-      </div>
+      </div> -->
 
 
     </div>
