--- a/pomolo.html
+++ b/pomolo.html
@@ -70,7 +70,8 @@
           <li><a href="index.html#portfolio">PROJECTS</a></li>
           <li><a href="aboutme.html">ABOUT</a></li>
           <li><a href="https://drive.google.com/file/d/12rzkYMgnRpGLCT0f8pZ9-xkR90WFunnO/view?usp=sharing" target="_blank">RESUME</a></li>
-                    <li><a href="grid-gallery.html">PHOTOGRAPHY</a></li>
+          <!-- <li><a href="grid-gallery.html">PHOTOGRAPHY</a></li> -->
+        
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav> <!-- .navbar -->
@@ -207,10 +208,10 @@
 
                   <!-- START SECTION: SOLUTION -->
                   <div class="col-lg-12" style="margin-bottom:0%;">
-                    <h3>THE SOLUTION</h3>
+                    <h3 style="margin-bottom:50px;">THE SOLUTION</h3>
           
                     <ol style="margin-bottom:30px; ">
-                      <b> <u style="color: #8d8d8d; margin-bottom:10px; margin-left:-28px;"> Registration Flow </u> </b>
+                      <b style="color: #8d8d8d; margin-bottom:10px; margin-left:-28px;"> Registration Flow </b>
                       <li style="margin-left:15px;">
                         <b style="color:#8d8d8d;"> Less security requirements</b> <br> 
                         No restrictions for creating
@@ -231,7 +232,7 @@
                     </ol>
 
                     <ol style="margin-bottom:30px;">
-                      <b> <u style="color: #8d8d8d; margin-bottom:10px; margin-left:-28px;"> Login Flow </u> </b>
+                      <b style="color: #8d8d8d; margin-bottom:10px; margin-left:-28px;"> Login Flow </b>
                       <li style="margin-left:15px;">
                         <b style="color:#8d8d8d;">  Facial or fingerprint authentication </b> <br> 
                         For an effortless login, users can access their account
@@ -247,7 +248,7 @@
 
 
                     <ol style="margin-bottom:0px; ">
-                      <b> <u style="color: #8d8d8d; margin-bottom:10px; margin-left:-28px;"> User Interface </u> </b>
+                      <b style="color: #8d8d8d; margin-bottom:10px; margin-left:-28px;"> User Interface </b>
                       <li style="margin-left:15px;">
                         Opted-in for a clean and simple aesthetic with soft shades for a tranquil feel.
                       </li>
@@ -1096,14 +1097,13 @@
 
                   <hr class="solid" style="margin-top:6%; margin-bottom:8%;">
 
-                  <p style="margin-top:0px; font-size:25px; width:100%; text-align:center; color:#000000;">
-                    <b> Thank you so much for reading! </b> <br> 
+                  <p style="margin-top:150px; font-size:30px; width:100%; text-align:center; color:#000000;">
+                    <b> Thank you for reading! </b> <br> 
                   </p>
 
 
-                  <p style="color: #8e8e8e; margin-top:20px; font-size:16px; width:80%; text-align:center;">
-                    Feel free to check out the design
-                    process for Pomolo's onboarding experience below.
+                  <p style="color: #8e8e8e; margin-top:40px; font-size:15px; width:80%; text-align:center;">
+                    Check out the design process for Pomolo's onboarding experience below.
                   </p>
 
               </div> <!-- end of entry -->
