--- a/aboutme.html
+++ b/aboutme.html
@@ -64,7 +64,8 @@
           <li><a href="index.html#portfolio">PROJECTS</a></li>
           <li><a href="aboutme.html">ABOUT</a></li>
           <li><a href="https://drive.google.com/file/d/12rzkYMgnRpGLCT0f8pZ9-xkR90WFunnO/view?usp=sharing" target="_blank">RESUME</a></li>
-                    <li><a href="grid-gallery.html">PHOTOGRAPHY</a></li>
+          <!-- <li><a href="grid-gallery.html">PHOTOGRAPHY</a></li> -->
+        
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav> <!-- .navbar -->
