--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <li><a class="nav-link scrollto" href="#portfolio">PROJECTS</a></li>
           <li><a href="aboutme.html">ABOUT</a></li>
           <li><a href="https://drive.google.com/file/d/12rzkYMgnRpGLCT0f8pZ9-xkR90WFunnO/view?usp=sharing" target="_blank">RESUME</a></li>
-                    <li><a href="grid-gallery.html">PHOTOGRAPHY</a></li>
+          <!-- <li><a href="grid-gallery.html">PHOTOGRAPHY</a></li> -->
           
           <!-- <li><a href="blog.html">Blog</a></li> -->
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
