--- a/under_construction.html
+++ b/under_construction.html
@@ -104,7 +104,7 @@
 								>RESUME</a
 							>
 						</li>
-						<li><a href="grid-gallery.html">PHOTOGRAPHY</a></li>
+						<!-- <li><a href="grid-gallery.html">PHOTOGRAPHY</a></li> -->
 					</ul>
 					<i class="bi bi-list mobile-nav-toggle"></i>
 				</nav>
