--- a/pomolo.html
+++ b/pomolo.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> Pomolo's Onboarding Experience  • Irene Lue </title>
+  <title> Registration and Login Experience  • Irene Lue </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -106,7 +106,7 @@
 
             <article class="entry entry-single">
               <h2 class="title1">
-                Pomolo's Onboarding Experience
+                Registration and Login Experience
               </h2>
 
               <h2 class="subtitle1">
