--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               <div class="image" >
                 <img src="assets/img/portfolio/pomolo.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay2">
-                    <div class="image_title"> Pomolo's Onboarding <br> Experience </div>
+                    <div class="image_title"> Registration and Login <br> Experience </div>
                     <p class="image_description"> Mobile, User Research, UX, Visual Design
                     </p>
                 </div>
