updated pomolo and index

--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;450&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300;400;500;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Amiko:wght@300;400;500;600;650;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@300;400;500;600;650;700&display=swap" rel="stylesheet">
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,500,600,700' rel='stylesheet' type='text/css'>
+
+
 
   <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
         
@@ -123,7 +126,7 @@
     <div class="hero-container" style="padding-left:0px; border:white 1px solid; margin-right:50px;">
       <br> <br>
       <h1 class="logo"><a href="index.html" title="IRENE LUE">  IRENE LUE </a> </h1>
-      <h1> Hello! I'm Irene. </h1>
+      <h1> Hey there, I'm Irene! </h1>
 
       <!-- HEADER ROTATOR REMOVED STARTING HERE -->
       <h3 > Computer science graduate from UC San Diego and 
@@ -165,7 +168,7 @@
               <div class="image">
                 <img src="assets/img/portfolio/pomolo_2.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay2">
-                    <div class="image_title"> Pomolo </div>
+                    <div class="image_title"> pomolo </div>
                     <p class="image_description"> Mobile, User Research, UX, Visual Design
                 </div>
               </div>
@@ -284,8 +287,8 @@
             <a href="https://github.com/irenelue" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
             <!-- <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fab fa-dribbble"></i></a> -->
             <a href="https://www.instagram.com/irenelue/" class="class1" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
-            <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
-            <a href="https://www.twitter.com/irenelue/" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a> 
+            <!-- <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a> -->
+            <!-- <a href="https://www.twitter.com/irenelue/" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a>  -->
             <!-- <a href="https://www.behance.net/irene_lue" class="class1" target="_blank" class="linkedin" title="Behance"><i class="fab fa-behance"></i></a> -->
             <!-- <a href="https://medium.com/@irenelue" class="class1" target="_blank" title="Medium"><i class="fab fa-medium-m" ></i></a> -->
           </div>
