updated pomolo solutions

--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
       <div class="container" style="margin-left:0px; margin-top:20px;">
         <div class="row">
 
-          <a class="button-box" href="aboutme.html" target="_blank"> Read more </a>
+          <a class="button-box" href="aboutme.html" target="_blank"> READ MORE </a>
 
           <div class="column" style="width:2%;"></div>
 
-          <a class="button-box" href="https://drive.google.com/file/d/12rzkYMgnRpGLCT0f8pZ9-xkR90WFunnO/view?usp=sharing" target="_blank">Resume</a></li>
+          <a class="button-box" href="https://drive.google.com/file/d/12rzkYMgnRpGLCT0f8pZ9-xkR90WFunnO/view?usp=sharing" target="_blank">RESUME</a></li>
 
         </div>
       </div>
