updated pomolo solutions

--- a/pomolo.html
+++ b/pomolo.html
@@ -240,7 +240,7 @@
                       </li>
                       <li style="margin-left:15px;font-weight:350;">
                         <p style="color:#0E1126;font-weight:450;"> Simple account recovery </p>
-                        Recovering an account after forgetting a password can be a complicated process and unnecessarily stressful.
+                        Recovering an account after forgetting a password can be an unncessarily complicated and stressful process.
                         To save users' worries, they can easily recover their account with just email address and a confirmation of their
                         identity.
                       </li>
