--- a/pomolo.html
+++ b/pomolo.html
@@ -238,23 +238,20 @@
                         Typing out login credentials one-by-one can feel taxing and burdensome. For an effortless login, users have
                         the option to access their account within seconds with a quick facial or fingerprint scan.
                       </li>
+
                       <li style="margin-left:15px;font-weight:350;">
                         <p style="color:#0E1126;font-weight:450;"> Simple account recovery </p>
                         Recovering an account after forgetting a password can be an unncessarily complicated and stressful process.
                         To save users' worries, they can easily recover their account with just email address and a confirmation of their
                         identity.
                       </li>
-                    </ol>
 
-
-                    <ol style="margin-bottom:0px; ">
-                      <b style="color: #8d8d8d; margin-bottom:10px; margin-left:-28px;"> User Interface </b>
-                      <li style="margin-left:15px;">
+                       <li style="margin-left:15px;font-weight:350;">
+                        <p style="color:#0E1126;font-weight:450;"> Clean and easy-to-read interface </p>
                         Opted-in for a clean and simple aesthetic with soft shades for a tranquil feel.
+                        Additionally, made liberal use of white space to improve readability and organization of design elements.
                       </li>
-                      <li style="margin-left:15px;">
-                        Liberal use of white space to improve readability and organize design elements.
-                      </li>
+
                     </ol>
                     
 <!--                       Introducing Pomolo, a time management system app that 
