pw protected page ip

--- a/aboutme.html
+++ b/aboutme.html
@@ -101,7 +101,7 @@
                 <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch"> -->
                 <div class="member-img">             <!-- class="img-fluid rounded-circle" --> 
                   <br>
-                  <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid" alt="" style="border-radius:10px; margin-bottom:50px;"> 
+                  <img id="prof-pic" src="assets/img/team/team-00.jpg" class="img-fluid" alt="" style="border-radius:500px; margin-bottom:50px;"> 
                 
                 </div>
               </div>
@@ -110,11 +110,11 @@
 
           <div class="col-lg-6 mx-auto" style="border:solid white 1px; margin:auto;"> 
             <div class="container">
-              <!-- <div class="about-title2">
-                Hi there! 🤝 -->
+              <div class="about-title2">
+                Nice to meet you! 🤝
               </div>
               <div class ="about-paragraph2">
-                Nice to meet you, I'm Irene! 🤝 <br> <br> I’m a Computer Science 
+                I’m a Computer Science 
                 graduate from UC San Diego and UX designer in training. I'm 
                 currently studying under UCLA's UX Design program and working on 
                 projects in product design and web development.
@@ -184,7 +184,7 @@
           <!-- ========== Added books/movies/etc ========== -->
           <div class="instagram-container">
             <div class="instagram-title-box">
-              <div class="books-titleNL" style="margin-bottom:10px"> About Irene </div>
+              <div class="books-titleNL" style="margin-bottom:10px"> About Me </div>
             </div>
             <div class="row">
               <section id="portfolio" class="portfolio" style="margin-bottom:-90px">
@@ -491,8 +491,8 @@
               <a href="https://github.com/irenelue" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
               <!-- <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fab fa-dribbble"></i></a> -->
               <a href="https://www.instagram.com/irenelue/" class="class1" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
-              <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a>
-              <a href="https://www.twitter.com/irenelue/" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a> 
+              <!-- <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a> -->
+              <!-- <a href="https://www.twitter.com/irenelue/" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a>  -->
               <!-- <a href="https://www.behance.net/irene_lue" class="class1" target="_blank" class="linkedin" title="Behance"><i class="fab fa-behance"></i></a> -->
               <!-- <a href="https://medium.com/@irenelue" class="class1" target="_blank" title="Medium"><i class="fab fa-medium-m" ></i></a> -->
             </div>
