pw protected page done

--- a/pomolo.html
+++ b/pomolo.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title> Registration and Login Experience  • Irene Lue </title>
+  <title> Registration and Login Experience • IL </title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
