--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>About Me • Irene Lue</title>
+  <title>About Me • IL</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
