added bala and chip

--- a/index.html
+++ b/index.html
@@ -159,17 +159,49 @@
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
-      <div class="container">
+      <div class="container" style="width:80%;">
         <br> <br>
         <div class="row portfolio-container">
+
+
+          <!-- Content Design  -->
+          <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
+            <a href="under_construction.html" target="blank">
+              <div class="image" >
+                <img src="assets/img/proj_bala/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
+                <div class="image_overlay2">
+                    <div class="image_title"> 🔒 Bala Bangles </div>
+                    <p class="image_description"> Mobile, User Research, UX, Visual Design
+                    </p>
+                </div>
+              </div>
+            </a>
+          </div>
+
+
+          <!-- Chipotle redesign -->
+          <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
+            <a href="under_construction.html" target="blank">
+              <div class="image" >
+                <img src="assets/img/proj_chipotle/cover.png" style="border-radius:10px;" class="img-fluid" alt="">
+                <div class="image_overlay2">
+                    <div class="image_title"> 🔒 Chipotle Redesign </div>
+                    <p class="image_description"> Mobile, User Research, UX, Visual Design
+                    </p>
+                </div>
+              </div>
+            </a>
+          </div>
+
+
           <!-- Proj 1: Covid-Code -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
             <a href="under_construction.html" target="blank">
               <div class="image">
                 <img src="assets/img/portfolio/pomolo_2.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay2">
-                    <div class="image_title"> pomolo </div>
-                    <p class="image_description"> Mobile, User Research, UX, Visual Design
+                    <div class="image_title"> 🔒 Pomolo </div>
+                    <p class="image_description"> Mobile Design, User Research, UX, Visual Design
                 </div>
               </div>
             </a>
@@ -187,17 +219,19 @@
 
           <!-- Proj 2 -->
           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
-            <a href="pomolo.html">
+            <a href="password.html">
               <div class="image" >
                 <img src="assets/img/portfolio/pomolo.png" style="border-radius:10px;" class="img-fluid" alt="">
                 <div class="image_overlay2">
-                    <div class="image_title"> Registration and Login <br> Experience </div>
+                    <div class="image_title"> 🔒 Registration and Login <br> Experience </div>
                     <p class="image_description"> Mobile, User Research, UX, Visual Design
                     </p>
                 </div>
               </div>
             </a>
           </div>
+
+          
 
           <!-- Proj 3 -->
 <!--           <div class="col-lg-4 col-md-6 portfolio-item" class="img-fluid">
