--- a/password.html
+++ b/password.html
@@ -145,7 +145,7 @@
 						Password: <input type="password" required id ="pass1">
 						<div class="row" style="margin-top:45px;">
 							<!-- contact button -->
-							<a class="button-box" style="width:250px;" href="mailto: irenelue01@gmail.com" target="_blank">CONTACT FOR ACCESS</a>
+							<a class="button-box" style="width:250px;" href="mailto:irenelue01@gmail.com?subject=Locked Page Access" target="_blank">CONTACT FOR ACCESS</a>
 							
 							<div class="column" style="width:2%;"></div>
 							
