--- a/password.html
+++ b/password.html
@@ -132,7 +132,7 @@
 
     <div class="hero-container" style="padding-left:0px; border:white 1px solid; margin-left:80px;">
 		<h1 style="font-size:40px;"> Password Protected </h1>
-		<h3> This project is password protected. Please enter the password for acccess.</h3>
+		<h3> This project is password protected. Please enter the password for access.</h3>
 
 
       	<div class="container" style="margin-left:0px; margin-top:30px;">
