updated password box customization

--- a/password.html
+++ b/password.html
@@ -142,11 +142,17 @@
 				<script src="password.js"></script>
 				<body>
 					<form class="passform" action="pomolo.html" onsubmit="return passcheck()">
-						Password: <input type="password" required id ="pass1">
+						<!-- password box -->
+						<input type="password" placeholder="Please enter password" required id ="pass1">
+
+						<!-- error -->
+						<div class=""error-text"></div>
+
 						<div class="row" style="margin-top:45px;">
 							<!-- contact button -->
 							<a class="button-box" style="width:250px;" href="mailto:irenelue01@gmail.com?subject=Locked Page Access" target="_blank">CONTACT FOR ACCESS</a>
 							
+							<!-- space inbetween 2 buttons -->
 							<div class="column" style="width:2%;"></div>
 							
 							<!-- submit button -->
