--- a/aboutme.html
+++ b/aboutme.html
@@ -129,7 +129,7 @@
                 </div>
 
               <div class ="about-paragraph2">
-                If you'd like to get in touch, feel free to reach out to me at: 
+                If you'd like to get in touch, feel free to reach out at: 
                 <a class="about-link" href="mailto: irenelue01@gmail.com" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
     
                 <!-- <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
@@ -483,7 +483,7 @@
 
         <div class="me-md-auto text-center">
           <div class="copyright">
-            <h1 style="color:#a8a8a8;font-family:Amiko;font-size:12px; font-weight:400; letter-spacing:1px; margin-top:5px; padding-bottom:5px; "> LUEIRENE@GMAIL.COM </h1>
+            <h1 style="color:#a8a8a8;font-family:Amiko;font-size:12px; font-weight:400; letter-spacing:1px; margin-top:5px; padding-bottom:5px; "> IRENELUE01@GMAIL.COM </h1>
             <h1 style="color:#a8a8a8;font-family:Amiko;font-size:12px;letter-spacing:0px;margin-bottom:30px;" <span> &copy IRENE LUE 2022 </span> </h1>
             <!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1> -->
           </div>
