--- a/password.html
+++ b/password.html
@@ -115,7 +115,7 @@
 
 
 	<!-- ======= UNDER CONSTRUCTION LANDING PAGE ======= -->
-	 <section id="hero" style="padding-bottom:600px;">
+	<section id="hero" style="padding-bottom:600px;">
     <!-- 
     <div class="container d-flex align-items-center justify-content-between">
       <h1 class="logo"><a href="index.html"> Irene Lue </a></h1>
@@ -193,6 +193,44 @@
 	<!-- <h1 style="color:#353535;font-size:12px;letter-spacing:0.5px;margin-bottom:30px;" <span> &copy IRENE LUE 2022 </span> </h1> -->
 	<!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1> -->
 	<!-- </footer> -->
+
+	<div class="footer-top">
+  <div class="container">
+    <div class="row">
+      <div class="container d-md-flex py-4">
+        <div class="credits">
+          <!-- All the links in the footer should remain intact. -->
+          <!-- You can delete the links only if you purchased the pro version. -->
+          <!-- Licensing information: https://bootstrapmade.com/license/ -->
+          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/tempo-free-onepage-bootstrap-theme/ -->
+          <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
+        </div>
+      </div>
+      <div class="section-contact-port">
+        <div class="me-md-auto text-center">
+          <div class="email">
+            <!-- <a href="mailto: irenelue01@gmail.com" class="class1" target="_blank" title="Email"><i class="fas fa-paper-plane" ></i></a> -->
+            <a href="https://www.linkedin.com/in/irenelue/" class="class1" target="_blank" class="linkedin" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/irenelue" class="class1" target="_blank" class="github" title="GitHub"><i class="bi bi-github"></i></a>
+            <!-- <a href="https://dribbble.com/irenelue/collections" class="class1" target="_blank" title="Dribbble"><i class="fab fa-dribbble"></i></a> -->
+            <a href="https://www.instagram.com/irenelue/" class="class1" target="_blank" title="Instagram"><i class="bi bi-instagram"></i></a>
+            <!-- <a href="https://open.spotify.com/user/lueirene" class="class1" target="_blank" title="Spotify"><i class="fab fa-spotify"></i></a> -->
+            <!-- <a href="https://www.twitter.com/irenelue/" class="class1" target="_blank" title="Twitter"><i class="bi bi-twitter"></i></a>  -->
+            <!-- <a href="https://www.behance.net/irene_lue" class="class1" target="_blank" class="linkedin" title="Behance"><i class="fab fa-behance"></i></a> -->
+            <!-- <a href="https://medium.com/@irenelue" class="class1" target="_blank" title="Medium"><i class="fab fa-medium-m" ></i></a> -->
+          </div>
+        </div>
+      </div>
+      <div class="me-md-auto text-center">
+        <div class="copyright">
+          <h1 style="color:#a8a8a8;font-family:Amiko;font-size:12px; font-weight:400; letter-spacing:1px; margin-top:5px; padding-bottom:5px; "> IRENELUE01@GMAIL.COM </h1>
+          <h1 style="color:#a8a8a8;font-family:Amiko;font-size:12px;letter-spacing:0px;margin-bottom:30px;" <span> &copy IRENE LUE 2022 </span> </h1>
+          <!-- <h1 style="color:#4e4e4e;font-size:14px;letter-spacing:0.5px;"<span> Designed and developed by Irene Lue </span></h1> -->
+        </div>
+      </div>
+    </div>
+  </div>
+</div> <!-- End Footer -->
 
 
 	<!-- Vendor JS Files -->
