--- a/pomolo.html
+++ b/pomolo.html
@@ -134,7 +134,7 @@
                 <div class="case-details">                  
                   <h2 class="case-details"> TIME <br> <br> - </h2>
                   <p class="case-details">
-                    April - June 2022
+                    Spring 2022 (April - June)
                   </p>
                 </div>
                 <!-- role -->
@@ -151,13 +151,7 @@
                     Mobile App (iOS)
                   </p>
                 </div>
-                <!-- type -->
-                <div class="case-details">                  
-                  <h2 class="case-details"> TOOLS <br> <br> - </h2>
-                  <p class="case-details">
-                    Figma
-                  </p>
-                </div>
+
               </div>
 
  
