--- a/password.html
+++ b/password.html
@@ -132,7 +132,7 @@
 
     <div class="hero-container" style="padding-left:0px; border:white 1px solid; margin-left:80px;">
 		<h1 style="font-size:40px;"> Password Protected </h1>
-		<h3> This project is password protected. Please enter the password for access.</h3>
+		<!-- <h3> This project is password protected. Please enter the password for access.</h3> -->
 
 
       	<div class="container" style="margin-left:0px; margin-top:30px;">
@@ -147,7 +147,7 @@
 
 						<div class="row" style="margin-top:45px;">
 							<!-- contact button -->
-							<a class="button-box" style="width:250px;" href="mailto:irenelue01@gmail.com?subject=Locked Page Access" target="_blank">CONTACT FOR ACCESS</a>
+							<a class="button-box" style="width:200px;" href="mailto:irenelue01@gmail.com?subject=Locked Page Access" target="_blank">CONTACT</a>
 							
 							<!-- space inbetween 2 buttons -->
 							<div class="column" style="width:2%;"></div>
