updated about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -197,8 +197,8 @@
                       <div class="books-list">
                         <ol>
                           <li> Strength-training </li>
-                          <li> Reading </li>
                           <li> Music </li>
+                          <li> Anything outdoors! </li>
                         </ol>
                       </div>
                       <div class="image_overlay2">
