updated about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -111,25 +111,25 @@
           <div class="col-lg-6 mx-auto" style="border:solid white 1px; margin:auto;"> 
             <div class="container">
               <div class="about-title2">
-                Nice to meet you! 🤝
+                About Irene 
               </div>
               <div class ="about-paragraph2">
-                I’m a Computer Science 
+                Nice to meet you! I’m a Computer Science 
                 graduate from UC San Diego and UX designer in training. I'm 
                 currently studying under UCLA's UX Design program and working on 
-                projects in product design and web development.
+                projects in product design and mobile app development.
                 </div>
                 
               <div class = "about-paragraph2">
-                Because I’m always eager to transform my habits, learn new skills, 
-                and challenge my limits, my interests lie within habit formation
-                and self-development. I believe in designing thoughtful and simple solutions 
-                that are long-lasting, resolve human needs, and can help people 
-                live more fulfilling lives.
+                Because I’m always eager to learn and challenge my limits, my 
+                interests lie within self-development and habit formation. I 
+                believe in designing thoughtful, simple, and long-lasting 
+                solutions that can resolve human needs and help people live 
+                more fulfilling lives.
                 </div>
 
               <div class ="about-paragraph2">
-                If you'd like to get in touch, feel free to reach out at: 
+                I'd love to hear from you! Feel free to reach out to me at: 
                 <a class="about-link" href="mailto: irenelue01@gmail.com" target="_blank" title="irenelue01@gmail.com"> irenelue01@gmail.com</a>.
     
                 <!-- <a class="cta-btn" href="mailto: irenelue01@gmail.com" 
@@ -184,7 +184,7 @@
           <!-- ========== Added books/movies/etc ========== -->
           <div class="instagram-container">
             <div class="instagram-title-box">
-              <div class="books-titleNL" style="margin-bottom:10px"> ABOUT </div>
+              <div class="books-titleNL" style="margin-bottom:10px"> To give you a better idea of who I am: </div>
             </div>
             <div class="row">
               <section id="portfolio" class="portfolio" style="margin-bottom:-90px">
@@ -235,7 +235,7 @@
                         <ol>
                           <li> Harry Potter Series</li>
                           <li> Pursuit of Happyness </li>
-                          <li> Kimi No Na Wa </li>
+                          <li> Stand by Me </li>
                         </ol>
                       </div>
                       <div class="image_overlay2">
