--- a/password.html
+++ b/password.html
@@ -131,8 +131,8 @@
     </nav> <!-- .navbar -->
 
     <div class="hero-container" style="padding-left:0px; border:white 1px solid; margin-left:80px;">
-		<h1 style="font-size:40px;"> Password Protected </h1>
-		<!-- <h3> This project is password protected. Please enter the password for access.</h3> -->
+		<h1 style="font-size:40px;"> Password Protected Project </h1>
+		<h3> Please enter the password to continue or contact me for assistance.</h3>
 
 
       	<div class="container" style="margin-left:0px; margin-top:30px;">
