updated about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -193,12 +193,12 @@
                   <div class="column" class="img-fluid">
                     <div class="image">
                       <img src="assets/img/things/hobbies.jpg" class="img-fluid" alt="" style="border-radius:10px;">             
-                      <div class="books-middle"> INTERESTS </div>
+                      <div class="books-middle"> HOBBIES </div>
                       <div class="books-list">
                         <ol>
                           <li> Strength-training </li>
-                          <li> Music </li>
-                          <li> Anything outdoors! </li>
+                          <li> Listening to music </li>
+                          <li> Anything active or sports-related </li>
                         </ol>
                       </div>
                       <div class="image_overlay2">
@@ -256,9 +256,9 @@
                       </div> -->
                       <div class="books-list">
                         <ol>
-                          <li> The Daily </li> 
                           <li> On Purpose with Jay Shetty </li>    
-                          <li> Radiolab </li>                       
+                          <li> Radiolab </li>   
+                          <li> WorkLife</li>                    
                         </ol>
                       </div>
                       <div class="image_overlay2">
@@ -270,14 +270,14 @@
                   <div class="column" class="img-fluid">
                     <div class="image">
                       <img src="assets/img/things/quotes.jpg" class="img-fluid" alt="" style="border-radius:10px;">
-                      <div class="books-middle"> CAUSES </div>
+                      <div class="books-middle"> INTERESTS </div>
                       <!-- <div class="image_overlay">
                           <div class="image_title2">BOOKS</div>
                       </div> -->
                       <div class="books-list"> 
                         <ol>        
-                          <li> Human Rights </li>                             
-                          <li> Environmentalism </li>  
+                          <li> Architecture </li>                             
+                          <li> Traveling </li>  
                           <li> Animal Welfare </li>
                         </ol> 
                       </div>
